<resources>
    <string name="app_name">My OMDB</string>
    <string name="tab1">MOVIES</string>
    <string name="tab2">WATCH LIST</string>
    <string name="tab3">FAVORITES</string>
	<string name="movieTitle">Title</string>     
	<string name="movieYear">Year</string>     
	<string name="movieRated">Rated</string>     
	<string name="movieReleased">Released</string>     
	<string name="movieRuntime">Runtime</string>     
	<string name="movieGenre">Genre</string>     
	<string name="movieDirector">Director</string>     
	<string name="movieWriter">Writer</string>     
	<string name="movieActors">Actors</string>     
	<string name="moviePlot">Plot</string>     
	<string name="searchHint">Search</string>     
    <string name="searchable">Searchable</string>
    <string name="menu_search">Searchable</string>
</resources>
